<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/landing_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- @username should not be hard coded -->

    <ScrollView
...
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/eventsIcon"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_events" />

                    <TextView
                        android:layout_width="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/facilitiesIcon"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_facility" />

                    <TextView
                        android:layout_width="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/profileIcon"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_profile" />

                    <TextView
                        android:layout_width="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/settingsIcon"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_setting" />

                    <TextView
                        android:layout_width="wrap_content"
...
