<!-- res/layout/dialog_edit_event.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Event"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Event Title" />

    <EditText
        android:id="@+id/edit_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Event Name" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Description" />

    <EditText
        android:id="@+id/edit_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Event Description" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Geolocation requirement" />

</LinearLayout>
