...
        android:queryHint="Search users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <ListView
        android:id="@+id/users_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="16dp" />

...
