...

        <TextView
            android:id="@+id/headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Profile"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <ImageButton
            android:id="@+id/del_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/ic_del" />
...
            android:layout_marginHorizontal="24dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="User Name"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="Email"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="Contact"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">


        <Button
            android:id="@+id/edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="Edit Profile"
...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Upload Image"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

            <Button
                android:id="@+id/generate_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Generate Image"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
        </LinearLayout>
...
