...
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contact" />

        <EditText
            android:id="@+id/user_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Contact"
            android:textSize="18sp" />

        <Button
            android:id="@+id/finish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Finish" />

        <Button
...
