...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/noti_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:padding="8dp"
                android:text="Notification"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
...
